pkg/provider/kubernetes/ingress/fixtures/Ingress-with-wildcard-host-and-same-host_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - host: '*.tarefik.tchouk'
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
  - host: tarefik.tchouk
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service1
          servicePort: 80
